feat(RazorPagesAdmin): Add Razor Pages admin project. Implement login and basic book management options.

--- a/SmartLibrary.RazorPagesAdmin/Pages/Index.cshtml
+++ b/SmartLibrary.RazorPagesAdmin/Pages/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
-@model IndexModel
+@model SmartLibrary.RazorPagesAdmin.Pages.IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Welcome to SmartLibrary Admin Panel</h1>
+
+<p>
+    <a class="btn btn-primary" asp-page="/Login">Login</a>
+</p>
