feat(RazorPagesAdmin): Add GraphQL client page to execute graphQL requests.

--- a/SmartLibrary.RazorPagesAdmin/Pages/Admin/BooksManagement.cshtml
+++ b/SmartLibrary.RazorPagesAdmin/Pages/Admin/BooksManagement.cshtml
@@ -25,6 +25,7 @@
     <li><a asp-page="BooksManagement">Books Management</a></li>
     <li><a asp-page="UserManagement">User Management</a></li>
     <li><a asp-page="RoleManagement">Role Management</a></li>
+    <li><a asp-page="GraphQLManagement">Graph QL client</a></li>
 </ul>
 
 <hr />
