--- a/SmartLibrary.RazorPagesAdmin/Pages/Admin/AdminPanel.cshtml
+++ b/SmartLibrary.RazorPagesAdmin/Pages/Admin/AdminPanel.cshtml
@@ -27,4 +27,5 @@
     <li><a asp-page="BooksManagement">Books Management</a></li>
     <li><a asp-page="UserManagement">User Management</a></li>
     <li><a asp-page="RoleManagement">Role Management</a></li>
+    <li><a asp-page="GraphQLManagement">Graph QL client</a></li>
 </ul>
